namespace pySDyPPApi.Models
{
    public class Constantes : Prueba
    {
        public float Peso { get; set; }
        public float Altura { get; set; }
        public float TensionArterial { get; set; }
        public float glucemiaCapilar { get; set; }


        public override void CalcularSiguienteRealizacion()
        {
            this.SiguienteRealizacion = this.FechaRealizacion.AddMonths(2);
            return;
        }

    }
}