namespace pySDyPP.Models
{
    public class TipoI : Retinografia
    {
    }
}
