namespace pySDyPP.Models
{
    public class TipoII : Retinografia
    {
        public bool Alteraciones { get; set; }
    }
}
