@startuml

class Paciente{
    - id: int
    - telefono: String
    - nombre: String
    - apellidos: String
    - edad : int
    - genero: String
    - fechaNacimiento: Date
    - tipoDiabetes: String
    - alteracionesTipoII: Boolean

}
class Pruebas{
    - id : int
    - tipo: String
    - realizada: Boolean
    - fechaRealizacion: Date
    - siguienteRealizacion: Date
    - resultados: String
    - observaciones: String
    - estado: String
    - pacienteId: int
    - paciente : Paciente
}
class ITB{}
class Analitica{
    - hbaI : Float
}
class Electrocardiograma{}
class Retinografia{
    - tipo: String
}
class TipoI{}
class TipoII{
    - alteraciones : Boolean
}
class Constantes{
    - peso: Float
    - altura: Float
    - tensionArterial: Float
    - glucemiaCapilar: Float
}
class Preguntas{
    - actividadFisica: String
    - fuma: String
    - drogas: String
    - alcohol: String
    - tomaMedicacionCorrectamente: String
}

Paciente "1" -- "0..*" Pruebas : tiene >
Pruebas <|--  ITB
Pruebas <|-- Analitica
Pruebas <|-- Electrocardiograma
Pruebas <|-- Retinografia
Pruebas <|-- Constantes
Pruebas <|-- Preguntas
Retinografia <|-- TipoI
Retinografia <|-- TipoII

@enduml